--- a/DFWatch/IntegerUpDown.xaml
+++ b/DFWatch/IntegerUpDown.xaml
@@ -1,108 +1,20 @@
-﻿<UserControl x:Class="NumericUpDown.IntegerUpDown"
+﻿<!--  The XAML below has been heavily modified to work with Material Design in XAML for this project  -->
+
+<UserControl x:Class="NumericUpDown.IntegerUpDown"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
-             xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero"
-             MinWidth="50">
-    <UserControl.Resources>
-        <Style x:Key="ButtonFocusVisual">
-            <Setter Property="Control.Template">
-                <Setter.Value>
-                    <ControlTemplate>
-                        <Rectangle Margin="2" SnapsToDevicePixels="true"
-                                   Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"
-                                   StrokeDashArray="1 2"
-                                   StrokeThickness="1" />
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-        <LinearGradientBrush x:Key="ButtonNormalBackground" StartPoint="0,0" EndPoint="0,1">
-            <GradientStop Offset="0" Color="#F3F3F3" />
-            <GradientStop Offset="0.5" Color="#EBEBEB" />
-            <GradientStop Offset="0.5" Color="#DDDDDD" />
-            <GradientStop Offset="1" Color="#CDCDCD" />
-        </LinearGradientBrush>
-        <SolidColorBrush x:Key="ButtonNormalBorder"
-                         Color="#FF707070" />
-        <Style TargetType="{x:Type ButtonBase}"
-               x:Key="BaseButtonStyle">
-            <Setter Property="Background" Value="{StaticResource ButtonNormalBackground}" />
-            <Setter Property="BorderBrush" Value="{StaticResource ButtonNormalBorder}" />
-            <Setter Property="BorderThickness" Value="1" />
-            <Setter Property="FocusVisualStyle" Value="{StaticResource ButtonFocusVisual}" />
-            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
-            <Setter Property="HorizontalContentAlignment" Value="Center" />
-            <Setter Property="Padding" Value="1" />
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type ButtonBase}">
-                        <theme:ButtonChrome x:Name="Chrome"
-                                            Background="{TemplateBinding Background}"
-                                            BorderBrush="{TemplateBinding BorderBrush}"
-                                            RenderDefaulted="{TemplateBinding Button.IsDefaulted}"
-                                            RenderMouseOver="{TemplateBinding IsMouseOver}"
-                                            RenderPressed="{TemplateBinding IsPressed}"
-                                            SnapsToDevicePixels="true">
-                            <ContentPresenter Margin="{TemplateBinding Padding}"
-                                              HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                              VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                              RecognizesAccessKey="True"
-                                              SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
-                        </theme:ButtonChrome>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsKeyboardFocused" Value="true">
-                                <Setter TargetName="Chrome" Property="RenderDefaulted" Value="true" />
-                            </Trigger>
-                            <Trigger Property="ToggleButton.IsChecked" Value="true">
-                                <Setter TargetName="Chrome" Property="RenderPressed" Value="true" />
-                            </Trigger>
-                            <Trigger Property="IsEnabled" Value="false">
-                                <Setter Property="Foreground" Value="#ADADAD" />
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-            <Setter Property="VerticalContentAlignment" Value="Center" />
-        </Style>
-        <Style TargetType="{x:Type RepeatButton}"
-               x:Key="UpDownButtonStyle"
-               BasedOn="{StaticResource BaseButtonStyle}">
-            <Setter Property="Control.Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="ButtonBase">
-                        <Border Name="border"
-                                Background="{TemplateBinding Panel.Background}"
-                                BorderBrush="{TemplateBinding Border.BorderBrush}"
-                                BorderThickness="{TemplateBinding Border.BorderThickness}"
-                                CornerRadius="1"
-                                SnapsToDevicePixels="True">
-                            <ContentPresenter Name="contentPresenter"
-                                              Margin="{TemplateBinding Control.Padding}"
-                                              HorizontalAlignment="{TemplateBinding Control.HorizontalContentAlignment}"
-                                              VerticalAlignment="{TemplateBinding Control.VerticalContentAlignment}"
-                                              Content="{TemplateBinding ContentControl.Content}"
-                                              ContentStringFormat="{TemplateBinding ContentControl.ContentStringFormat}"
-                                              ContentTemplate="{TemplateBinding ContentControl.ContentTemplate}"
-                                              Focusable="False"
-                                              RecognizesAccessKey="True"
-                                              SnapsToDevicePixels="{TemplateBinding UIElement.SnapsToDevicePixels}" />
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-            <Setter Property="Stylus.IsPressAndHoldEnabled" Value="false" />
-        </Style>
-    </UserControl.Resources>
-
+             MinWidth="70">
     <Grid>
+        <!--#region Column definitions-->
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
+        <!--#endregion-->
 
+        <!--#region Textbox-->
         <Grid Grid.Column="0">
             <TextBox x:Name="PART_NumericTextBox"
                      Grid.Column="0" Margin="0"
@@ -113,37 +25,40 @@
                      PreviewTextInput="NumericBox_PreviewTextInput"
                      Style="{StaticResource MaterialDesignOutlinedTextBox}" />
         </Grid>
+        <!--#endregion-->
+
+        <!--#region Buttons-->
         <Grid Grid.Column="1" Margin="5,0,0,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <RepeatButton x:Name="PART_IncreaseButton"
-                          Grid.Column="0" Margin="2,0"
+                          Grid.Column="0" Height="30"
+                          Margin="2,0" Padding="2,0"
                           Background="{DynamicResource MaterialDesignPaper}"
-                          BorderBrush="{DynamicResource MaterialDesignTextAreaBorder}"
-                          BorderThickness="0"
                           Click="IncreaseBtn_Click"
                           Foreground="{DynamicResource PrimaryHueMidBrush}"
-                          Style="{DynamicResource UpDownButtonStyle}">
+                          Style="{DynamicResource MaterialDesignFlatButton}">
                 <RepeatButton.Content>
-                    <md:PackIcon Kind="PlusBold" Width="20" Height="20"/>
+                    <md:PackIcon Width="22" Height="22"
+                                 Kind="PlusThick" />
                 </RepeatButton.Content>
             </RepeatButton>
+
             <RepeatButton x:Name="PART_DecreaseButton"
-                          Grid.Column="1" Margin="2,0"
+                          Grid.Column="1" Height="30"
+                          Margin="2,0" Padding="2,0"
                           Background="{DynamicResource MaterialDesignPaper}"
-                          BorderBrush="{DynamicResource MaterialDesignTextAreaBorder}"
-                          BorderThickness="0"
                           Click="DecreaseBtn_Click"
                           Foreground="{DynamicResource PrimaryHueMidBrush}"
-                          Style="{DynamicResource UpDownButtonStyle}">
+                          Style="{DynamicResource MaterialDesignFlatButton}">
                 <RepeatButton.Content>
-                    <md:PackIcon Kind="MinusThick" Width="20" Height="20"/>
+                    <md:PackIcon Width="22" Height="22"
+                                 Kind="MinusThick" />
                 </RepeatButton.Content>
-
             </RepeatButton>
         </Grid>
-
+        <!--#endregion-->
     </Grid>
 </UserControl>
